updates data sink endpoints
